--- a/coronaboard-api/package.json
+++ b/coronaboard-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "coronaboard",
+  "name": "coronaboard-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "lodash": "^4.17.21"
+    "body-parser": "^1.20.0",
+    "express": "^4.18.1"
   }
 }
