--- a/tools/package.json
+++ b/tools/package.json
@@ -9,6 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "googleapis": "^39.2.0"
+    "dotenv": "^16.0.1",
+    "google-auth-library": "^8.4.0",
+    "googleapis": "^107.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
