--- a/crawler/package.json
+++ b/crawler/package.json
@@ -11,10 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.27.2",
-    "cheerio": "^1.0.0-rc.11",
-    "date-fns": "^2.28.0",
-    "date-fns-tz": "^1.3.4",
+    "cheerio": "^1.0.0-rc.12",
+    "date-fns": "^2.29.2",
+    "date-fns-tz": "^1.3.7",
     "lodash": "^4.17.21",
-    "puppeteer": "^14.1.2"
+    "puppeteer": "^17.1.0",
+    "xml2js": "^0.4.23"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
